@@ -1,3 +1,11 @@
+2005-03-03  Mike Kestner  <mkestner@novell.com>
+
+	* generator/ClassBase.cs : add null checking to CallByName. No sense
+	manually adding this for the ones that need it. Better to have g_criticals
+	then NullRefExceptions anyway.
+	* generator/MethodBody.cs : simplify out handle generation.
+	[A babystep toward #86620]
+
 2005-02-28  Dan Winship  <danw@novell.com>
 
 	* gtk/Container.custom (ChildType): fix this to just call
